# bdl-workflow

./: .gitignore  BDL.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: arquivista.prompt.md  construtor.prompt.md  critico.prompt.md  editor.prompt.md  escritor.prompt.md  guardiao_coesao.prompt.md  guardiao_estilo.prompt.md  workflow.md
BDL-project/: .gitignore  CHANGELOG.md  README.md
BDL-project/.github/prompts/: arquivista.prompt.md  construtor.prompt.md  escritor.prompt.md  guardiao_coesao.prompt.md
BDL/.github/prompts/: construtor.prompt.md  critico.prompt.md  editor.prompt.md  escritor.prompt.md  guardiao_estilo.prompt.md  workflow.md
bdlcli/: cli.py
bdlcli-project/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.py
bdlcli-project/bdlcli/: cli.py
bdlcli-project/testes/: relatorio_prompts.md  test_bdl.py
testes/: test_bdl.py
